syntax="proto3";

package service;

option go_package = "github.com/BlockchainZoo/spinechain-api-prototype/backend/schema/service";

import "model/transaction.proto";

service TransactionService {
    rpc GetTransactionsByAccountPublicKey(model.GetTransactionsByAccountPublicKeyRequest) returns (model.GetTransactionsResponse) {}
    rpc GetTransactionsByBlockID(model.GetTransactionsByBlockIDRequest) returns (model.GetTransactionsResponse) {}
}
